<resources>
    <string name="app_name">News Reader</string>
    <string name="no_available_news">No available news. Please try again to reload.</string>
    <string name="no_available_data">No available data to be show</string>
    <string name="settings">Settings</string>
    <string name="reload">Reload</string>
    <string name="details">Details</string>
    <string name="loaded_image">Loaded Image</string>
    <string name="full_story">Full Story</string>

    <string name="settings_feed_title">News Feed URL</string>
    <string name="settings_feed_url_default" translatable="false">https://www.engadget.com/rss.xml</string>
    <string name="settings_feed_url_key" translatable="false">feed_url_key</string>
    <string name="settings_display_image_key" translatable="false">display_image_key</string>
    <string name="settings_download_image_key" translatable="false">download_image_key</string>

    <string name="settings_display_title">Display Images</string>
    <string name="settings_display_summary_off">Images won\'t be displayed.</string>
    <string name="settings_display_summary_on">Images will be displayed.</string>

    <string name="settings_download_title">Download Images in the Background</string>
    <string name="settings_download_summary_off">Images won\'t be downloaded in the background.</string>
    <string name="settings_download_summary_on">Images will be downloaded in the background.</string>
</resources>