<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:defaultValue="@string/settings_feed_url_default"
        android:icon="@mipmap/ic_rss_feed"
        android:key="@string/settings_feed_url_key"
        android:title="@string/settings_feed_title"
        app:useSimpleSummaryProvider="true" />

    <CheckBoxPreference
        android:defaultValue="@bool/settings_display_images_default"
        android:icon="@mipmap/ic_display_img"
        android:key="@string/settings_display_image_key"
        android:summaryOff="@string/settings_display_summary_off"
        android:summaryOn="@string/settings_display_summary_on"
        android:title="@string/settings_display_title" />

    <CheckBoxPreference
        android:defaultValue="@bool/settings_download_images_default"
        android:icon="@mipmap/ic_download_img"
        android:key="@string/settings_download_image_key"
        android:summaryOff="@string/settings_download_summary_off"
        android:summaryOn="@string/settings_download_summary_on"
        android:title="@string/settings_download_title" />
</PreferenceScreen>